fix: [DEL-2856]: del selector spacing issue (#6802)
* fix: [DEL-2856]: del selector spacing issue

* fix: [DEL-2856]: snapshot update

--- a/src/modules/10-common/components/DelegateSelectors/DelegateSelectors.module.scss
+++ b/src/modules/10-common/components/DelegateSelectors/DelegateSelectors.module.scss
@@ -4,7 +4,7 @@
 
   .loader {
     display: flex;
-    height: 35px;
+    height: 32px;
     background: var(--white);
     align-items: center;
     border: 1px solid var(--form-field-border);
@@ -51,5 +51,12 @@
 
   & :global(.bp3-input.bp3-tag-input) {
     max-height: fit-content !important;
+  }
+}
+
+.delegateInput {
+  input,
+  :global(.bp3-tag) {
+    margin-bottom: 0 !important;
   }
 }
